Avanzando con el js del profiler

--- a/templates/DataCollector/translations.html.twig
+++ b/templates/DataCollector/translations.html.twig
@@ -1,6 +1,140 @@
 {% extends "@WebProfiler/Collector/translation.html.twig" %}
 
+{% block head %}
+    {{ parent() }}
+    <style>
+        .missing-translations-creator {
+            border: 1px solid #ccc;
+            padding: 5px;
+            border-radius: 5px;
+            background-color: white;
+        }
+
+        .translation-item-creator {
+            border: 1px solid #ccc;
+            padding: 5px;
+            margin-bottom: 5px;
+            border-radius: 5px;
+            display: flex;
+            gap: 10px;
+        }
+
+        .item-data {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+            width: 40%;
+        }
+
+        .item-data > div {
+            display: flex;
+            border: 1px solid;
+            border-radius: 3px;
+            background-color: #e0e0e0;
+            padding: 3px 6px;
+            align-items: center;
+            color: #777777;
+        }
+
+        .item-data span {
+            margin-left: auto;
+            color: #111;
+            user-select: all;
+        }
+
+        span.item-parameters {
+            user-select: auto !important;
+        }
+
+        .item-parameters span {
+            border: 1px solid;
+            display: inline-block;
+            border-radius: 3px;
+            padding: 2px;
+            margin: 2px 0px 2px 6px;
+            user-select: all;
+            backdrop-filter: brightness(90%);
+        }
+
+        .item-values {
+            display: flex;
+            flex-direction: column;
+            gap: 3px;
+            flex-grow: 1;
+        }
+
+        .item-values div {
+            display: flex;
+            margin-left: 10px;
+        }
+
+        .item-values div span {
+            padding: 5px;
+            border: 2px inset;
+            border-right: none;
+            background-color: #eee;
+            text-transform: uppercase;
+            font-weight: bold;
+            border-radius: 3px 0px 0px 3px;
+            min-height: 40px;
+        }
+
+        .item-values div textarea {
+            border-radius: 0px 3px 3px 0px;
+            width: 100%;
+            resize: vertical;
+            border: 2px inset;
+            border-left: none;
+            outline: none;
+            min-height: 40px;
+        }
+
+        .item-actions {
+            display: flex;
+            flex-direction: column;
+            gap: 2px;
+        }
+
+        .item-actions button {
+            padding: 10px 20px;
+            background-color: #7d7d87;
+            border: 0;
+            box-shadow: 3px 5px #506fce;
+            color: white;
+        }
+
+        .item-actions button:hover {
+            filter: brightness(80%);
+        }
+
+        .item-actions button:active {
+            margin-top: 1px;
+            box-shadow: 2px 4px #506fce;
+        }
+
+    </style>
+{% endblock %}
+
 {% block body %}
     {{ parent() }}
-    <script src="{{ asset('bundles/manueltranslation/profiler.js') }}"></script>
+
+    {% if block('missing_messages') is defined %}
+        {% set missingState = constant('Symfony\\Component\\Translation\\DataCollectorTranslator::MESSAGE_MISSING') %}
+        {% set translations = [] %}
+        {% for message in collector.messages|filter(m => m.state == missingState) %}
+            {% set translations = translations|merge([message.value(true)]|map(m => {
+                code: m.id,
+                domain: m.domain,
+                parameters: m.parameters[0]|default([]),
+            })) %}
+        {% endfor %}
+
+        {% if translations|length > 0 %}
+            <script>
+                var missingTranslations = {{ translations|json_encode|raw }};
+                var translationsLocales = {{ get_translations_locales()|json_encode|raw }};
+            </script>
+            <script src="{{ asset('bundles/manueltranslation/profiler.js') }}"></script>
+        {% endif %}
+    {% endif %}
 {% endblock body %}
